--- a/Exercise2.ipynb
+++ b/Exercise2.ipynb
@@ -3,11 +3,32 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/egacetta/gacetta_DSPN_S25/blob/main/Exercise2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "8g80jMldl9Sn"
       },
       "source": [
         "# Exercise 2: Coding Habits & Functions"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Summary statistics 3/4: NA value should not be included in the vector length calculation\n",
+        "2. T-test function 4/4: function works, but the value will be correct if the NA value was addressed correctly when calculating the length of the vector\n",
+        "3. Setting default values 2/2: function works, but the value will be correct if the NA value was addressed correctly when calculating the length of the vector"
+      ],
+      "metadata": {
+        "id": "gaVgxIhel5z1"
+      }
     },
     {
       "cell_type": "markdown",
@@ -37,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 1,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -67,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 2,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -77,7 +98,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d8068cfe-a2f8-4236-c312-34b236658ae5"
+        "outputId": "f042714d-d137-405b-863c-6cb35a5b3c50"
       },
       "outputs": [
         {
@@ -142,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 5,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -171,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 4,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -181,7 +202,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "3a095393-3726-476f-e866-9116e73baf0e"
+        "outputId": "c89d8bff-aae3-4835-8d5d-50e93266ba1f"
       },
       "outputs": [
         {
@@ -223,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 6,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -243,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 7,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -253,7 +274,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "25a52340-bfd9-4545-a11c-7e1fed38e5ac"
+        "outputId": "d3f0c91e-4ede-420a-d99a-6bda7f670123"
       },
       "outputs": [
         {
@@ -293,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 8,
       "metadata": {
         "scrolled": true,
         "vscode": {
@@ -302,9 +323,9 @@
         "id": "69daXbgal9Sy",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 208
+          "height": 213
         },
-        "outputId": "b85a9887-7028-420e-9cda-d60272836ac5"
+        "outputId": "b3af967b-f526-41f5-8937-4269a5cec247"
       },
       "outputs": [
         {
@@ -375,7 +396,8 @@
       "version": "4.4.1"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
