--- a/Exercise3.ipynb
+++ b/Exercise3.ipynb
@@ -11,6 +11,17 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "1. load packages 1/1\n",
+        "2. replicating summary outputs 4/5: the function doesn't have an output due to not having a return statement (See the cell that test the function output in the section)\n",
+        "3. summary table and indexing 4/4"
+      ],
+      "metadata": {
+        "id": "BoRDypK-dVMa"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "L4nOzVhyZXqK"
       },
@@ -34,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "UnBVazYfZXqP",
         "scrolled": true,
@@ -44,7 +55,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "321d6fee-afa5-4a56-fac7-a80e5d57b24c"
+        "outputId": "9d3f9e0f-1d0a-4645-d693-befc33e4fb0a"
       },
       "outputs": [
         {
@@ -73,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "metadata": {
         "scrolled": true,
         "vscode": {
@@ -84,7 +95,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 286
         },
-        "outputId": "791c029c-43a8-43a2-e490-dd0a42c9feb6"
+        "outputId": "308a6da5-d88e-4f64-b861-34195a3fa58f"
       },
       "outputs": [
         {
@@ -147,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 3,
       "metadata": {
         "scrolled": false,
         "vscode": {
@@ -156,9 +167,9 @@
         "id": "ASQPqnDdfw6g",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 416
+          "height": 428
         },
-        "outputId": "ba906cd4-a7a0-4513-aaff-46a166cd8bb8"
+        "outputId": "d0576fbf-7413-40b0-ee50-9fbe11330b10"
       },
       "outputs": [
         {
@@ -213,7 +224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 4,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -223,7 +234,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "3929d2dc-5c10-42c7-f3e7-e30f038dfd2a"
+        "outputId": "1b22d4b9-b369-441d-e09f-d0ef51cc1f8b"
       },
       "outputs": [
         {
@@ -264,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 5,
       "metadata": {
         "scrolled": true,
         "vscode": {
@@ -275,7 +286,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 69
         },
-        "outputId": "b21f5d83-0086-445f-b009-98c411982974"
+        "outputId": "1afd39cf-5f78-449b-d468-bd37f0a07cb1"
       },
       "outputs": [
         {
@@ -347,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 6,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -361,12 +372,38 @@
         "  SSE <- sum(residuals^2)\n",
         "  n <- nrow(data)\n",
         "  p <- length(model$coefficients)\n",
+        "  # need a return statement to store the final output of the function\n",
         "}"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "source": [
+        "# Testing the output of current res_SE function\n",
+        "test = res_SE(cred_lm)\n",
+        "print('Function output:', test)"
+      ],
+      "metadata": {
+        "id": "NQ0Zg7uad0gY",
+        "outputId": "fcae7dfe-c8f2-4c64-8e49-e517e59917e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1] \"Function output:\"\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -415,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -466,7 +503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -571,7 +608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -634,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -696,7 +733,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "r"
