--- a/Exercise4.ipynb
+++ b/Exercise4.ipynb
@@ -3,11 +3,33 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/egacetta/gacetta_DSPN_S25/blob/main/Exercise4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "-2W919d2ZXp7"
       },
       "source": [
         "# Exercise 4: Data cleansing"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Loading Data 1/1\n",
+        "2. Data Cleansing 3.5/4: should use length(D_RT) to calculate number of observations\n",
+        "3. Data Manipulation with Tidyverse 4/4\n",
+        "4. Plotting Data 1/1"
+      ],
+      "metadata": {
+        "id": "vPebPVRj9SCi"
+      }
     },
     {
       "cell_type": "markdown",
@@ -38,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "UnBVazYfZXqP",
         "vscode": {
@@ -120,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "5pXIjADNZXqU",
         "vscode": {
@@ -236,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "S_DJDsUzZXqY",
         "vscode": {
@@ -276,7 +298,7 @@
       ],
       "source": [
         "smry_lexicaldata <- lexicaldata_clean %>%\n",
-        "summarise(observations = length(lexicaldata_clean),\n",
+        "summarise(observations = length(lexicaldata_clean), #should use length(D_RT) to calculate number of observations\n",
         "          mean_RT = mean(D_RT),\n",
         "          sd_RT = sd(D_RT)\n",
         "          )\n",
@@ -294,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "ejQvUAZRZXqd",
         "vscode": {
@@ -362,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -427,7 +449,9 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "R",
