--- a/Exercise4.ipynb
+++ b/Exercise4.ipynb
@@ -23,8 +23,8 @@
       "cell_type": "markdown",
       "source": [
         "1. Loading Data 1/1\n",
-        "2. Data Cleansing 3.5/4: should use length(D_RT) to calculate number of observations\n",
-        "3. Data Manipulation with Tidyverse 4/4\n",
+        "2. Data Cleansing 4/4\n",
+        "3. Data Manipulation with Tidyverse 3.5/4: should use length(D_RT) to calculate number of observations\n",
         "4. Plotting Data 1/1"
       ],
       "metadata": {
