--- a/Exercise_5.ipynb
+++ b/Exercise_5.ipynb
@@ -3,11 +3,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/egacetta/gacetta_DSPN_S25/blob/main/Exercise_5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "-2W919d2ZXp7"
       },
       "source": [
         "# Exercise 5: Using ggplot"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Color, plot type and layers: 6/6\n",
+        "2. Adding statistics: 4/4"
+      ],
+      "metadata": {
+        "id": "b8HmodUmAa3z"
+      }
     },
     {
       "cell_type": "markdown",
@@ -41,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "GGpoaSPlSHHM",
         "outputId": "9c36bd56-b04f-4d2b-caa1-84e4330da2cd",
@@ -115,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "KmjzXxyQSHHP",
         "outputId": "d229ddb1-84da-4d26-c826-80d39c399c35",
@@ -536,7 +556,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "h9YDq2SbSHHW",
         "outputId": "7e6264d0-ff44-41d2-fda1-7393b5b9dd13",
@@ -583,7 +603,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "TCSlDbAFSHHW",
         "outputId": "4cf7559d-b0a1-4823-93fd-ff2c84881142",
@@ -711,7 +731,9 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "R",
