--- a/Exercise_8.ipynb
+++ b/Exercise_8.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/egacetta/gacetta_DSPN_S25/blob/main/Exercise_8.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "szkkhiCZDF52"
       },
       "source": [
@@ -12,6 +22,16 @@
         "\n",
         "*Note: Check out [this page](https://gtribello.github.io/mathNET/assets/notebook-writing.html) and [this page](https://towardsdatascience.com/write-markdown-latex-in-the-jupyter-notebook-10985edb91fd) for resources on how to do Latex formatting. You can also double click on the question cells in this notebook to see how math is formatted in the questions.*\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Deriving the Maximum Likelihood Estimate for Simple Linear Regression 6/6\n",
+        "2. Connection to data 4/4"
+      ],
+      "metadata": {
+        "id": "3wcK6QT7S0ia"
+      }
     },
     {
       "cell_type": "markdown",
@@ -146,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "PZ0lngBjDF58",
         "vscode": {
@@ -229,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "mWvD8shRDF5_",
         "vscode": {
@@ -316,7 +336,9 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "R",
