Exercise grading in progress

--- a/Exercise9.ipynb
+++ b/Exercise9.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/egacetta/gacetta_DSPN_S25/blob/main/Exercise9.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "-2W919d2ZXp7"
       },
       "source": [
@@ -23,6 +33,19 @@
         "\n",
         "*Data courtesy of Balota, D.A., Yap, M.J., Cortese, M.J., Hutchison, K.A., Kessler, B., Loftis, B., Neely, J.H., Nelson, D.L., Simpson, G.B., & Treiman, R. (2007). The English Lexicon Project. Behavior Research Methods, 39, 445-459.*"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Loading and formatting the data 1/1\n",
+        "2. Visualizing the data 1/1\n",
+        "3. Logisic Regression: Fitting the model 2/2\n",
+        "4. Interpreting predictions from the model\n",
+        "5. QDA"
+      ],
+      "metadata": {
+        "id": "ddbNZQcapXWO"
+      }
     },
     {
       "cell_type": "markdown",
@@ -536,7 +559,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "R",
