--- a/Exercise10.ipynb
+++ b/Exercise10.ipynb
@@ -11,6 +11,18 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "1. Loading and formatting the data 1/1\n",
+        "2. Model fitting 4/4\n",
+        "3. Model assessment 4/4\n",
+        "4. Reflection 1/1"
+      ],
+      "metadata": {
+        "id": "qL6N97jFYSUm"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "L4nOzVhyZXqK"
       },
@@ -40,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "UnBVazYfZXqP",
         "vscode": {
@@ -125,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "OIOIg-GRz4rN",
         "vscode": {
@@ -183,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "hFSnvvb_re2O",
         "vscode": {
@@ -233,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "8kjwT0je57N7",
         "vscode": {
@@ -327,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "KMDg8qb5FhJz",
         "vscode": {
@@ -434,7 +446,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "R",
