--- a/Exercise_11.ipynb
+++ b/Exercise_11.ipynb
@@ -13,6 +13,18 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "1. data plotting and train/test sets 2/2\n",
+        "2. knn 3/3\n",
+        "3. for loop 3/3\n",
+        "4. standardizing predictors 2/2"
+      ],
+      "metadata": {
+        "id": "24PT8u333Gfz"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "is-1Gkl6_cZC"
       },
@@ -28,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "076b5Q2i_cZC",
         "scrolled": false,
@@ -140,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "SZQl5C9H_cZD",
         "vscode": {
@@ -202,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Oj3YcEP0_cZE",
         "vscode": {
@@ -349,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "9pcL8AM9_cZG",
         "scrolled": true,
@@ -416,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "qhwTYq9B_cZH",
         "vscode": {
@@ -478,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "KWsncoDP_cZL",
         "vscode": {
@@ -587,7 +599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "D-GAvxGH_cZN",
         "scrolled": false,
@@ -646,7 +658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "we6mzfCJ_cZN",
         "vscode": {
@@ -717,7 +729,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "9Oia_P98_cZN",
         "scrolled": false,
@@ -795,7 +807,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "DVAfP_iB_cZO",
         "vscode": {
@@ -871,7 +883,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "R",
