--- a/Exercise_12.ipynb
+++ b/Exercise_12.ipynb
@@ -14,6 +14,18 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "1. Data 1/1\n",
+        "2. Leave-one-out Cross Validation 4/4\n",
+        "3. Compare to cv.glm 3/3\n",
+        "4. Adjusting K and Reflection 2/2"
+      ],
+      "metadata": {
+        "id": "-7j1pAI-FtMv"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "BubJSLTamtDg"
       },
@@ -28,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "QNuKGb6emtDg",
         "vscode": {
@@ -143,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "RDyry5h_mtDi",
         "vscode": {
@@ -205,7 +217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "5Z1ijm_PmtDj",
         "vscode": {
@@ -288,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "SYhKS5HimtDk",
         "vscode": {
@@ -342,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "wIUAW1AtmtDl",
         "vscode": {
@@ -374,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "bJiCmfqomtDl",
         "vscode": {
@@ -440,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "vZYq_NQlmtDm",
         "scrolled": true,
@@ -568,7 +580,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "R",
