--- a/Exercise_13.ipynb
+++ b/Exercise_13.ipynb
@@ -17,6 +17,19 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "1. Loading and visualizing data 1/1\n",
+        "2. Logistic classifier 2/2\n",
+        "3. Bootstrapped accuracy 3/3\n",
+        "4. Permutation test for grey matter effects 3/3\n",
+        "5. Reflection 1/1"
+      ],
+      "metadata": {
+        "id": "i2RXtMkVgKiY"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "h8YQJS8Dn8Or"
       },
@@ -33,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ja0PYvbIn8Os",
         "vscode": {
@@ -123,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "eJuQ_rSYn8Ou",
         "vscode": {
@@ -200,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "SHnmjiGEalHa",
         "scrolled": true,
@@ -324,7 +337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "2qb1RosDn8O0",
         "vscode": {
@@ -385,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "mwBjwZLIn8O1",
         "vscode": {
@@ -504,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "SmtoqASUn8O2",
         "vscode": {
@@ -628,7 +641,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "R",
