--- a/Exercise_14.ipynb
+++ b/Exercise_14.ipynb
@@ -20,6 +20,18 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "1. Simulating data 3/3\n",
+        "2. Visualizing data 2/2\n",
+        "3. Mediation Analysis 4/4\n",
+        "4. Reflection 1/1"
+      ],
+      "metadata": {
+        "id": "GbAzdxVPo3Hx"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "9DsyBTB6ZXqN"
       },
@@ -65,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "UnBVazYfZXqP",
         "vscode": {
@@ -164,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "H07EMQCwvzsL",
         "vscode": {
@@ -208,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "Pb-KYXwuwS28",
         "vscode": {
@@ -263,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "VeSOCXlMweSz",
         "vscode": {
@@ -334,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "PIPheP5ipgKg",
         "vscode": {
@@ -387,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "9h1ySgXm4HWm",
         "vscode": {
