--- a/Exercise_15.ipynb
+++ b/Exercise_15.ipynb
@@ -20,6 +20,19 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "1. Simulating data 1/1\n",
+        "2. run_analysis function 2/2\n",
+        "3. repeat_analysis() function 3/3\n",
+        "4. Testing different sample sizes 2/2\n",
+        "5. Reflection 2/2"
+      ],
+      "metadata": {
+        "id": "rVeFJHjrfFCE"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "9DsyBTB6ZXqN"
       },
@@ -43,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "UnBVazYfZXqP",
         "vscode": {
@@ -146,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "AidH_KidrX9L",
         "scrolled": true,
@@ -265,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "NheOpBDsBBo9",
         "vscode": {
@@ -332,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "RpURGbZQQlEK",
         "vscode": {
@@ -407,7 +420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "mp-a19XsS8Md",
         "vscode": {
@@ -449,7 +462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "gIkkWTG2aR4d",
         "scrolled": true,
