--- a/Exercise_16.ipynb
+++ b/Exercise_16.ipynb
@@ -24,6 +24,18 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "1. Best subset selection 4/4\n",
+        "2. Forward and backwards stepwise selection 3/3\n",
+        "3. Training and test error 3/3"
+      ],
+      "metadata": {
+        "id": "v9jWDnw0IAkX"
+      },
+      "id": "v9jWDnw0IAkX"
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "b065256e"
       },
@@ -736,7 +748,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "3f113879",
         "vscode": {
@@ -776,7 +788,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "a1dbdf04",
         "vscode": {
@@ -861,7 +873,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "87db7d52",
         "vscode": {
