--- a/Exercise9.ipynb
+++ b/Exercise9.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/egacetta/gacetta_DSPN_S25/blob/main/Exercise9.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "-2W919d2ZXp7"
       },
       "source": [
@@ -38,13 +28,16 @@
       "cell_type": "markdown",
       "source": [
         "1. Loading and formatting the data 1/1\n",
-        "2. Visualizing the data 1/1\n",
-        "3. Logisic Regression: Fitting the model 2/2\n",
-        "4. Interpreting predictions from the model\n",
-        "5. QDA"
+        "2. Visualizign the data 1/1\n",
+        "3. Logistic Regression: Fitting the model 2/2\n",
+        "4. Interpreting predictions from the model 2.5/3\n",
+        "\n",
+        "* The model doesn't perform well because it biases toward correct responses\n",
+        "\n",
+        "5. QDA 3/3"
       ],
       "metadata": {
-        "id": "ddbNZQcapXWO"
+        "id": "De_FXgdG5qXZ"
       }
     },
     {
@@ -560,7 +553,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "R",
