--- a/Exercise_18.ipynb
+++ b/Exercise_18.ipynb
@@ -17,6 +17,19 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "1. Loading data 1/1\n",
+        "2. Correlational structure 4/4\n",
+        "3. Principal Component analysis 3/3\n",
+        "4. Associating with Flanker task performance 4/4\n",
+        "5. Reflection 2/2"
+      ],
+      "metadata": {
+        "id": "JDV0EoAEWA2r"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "bODln6rvBujd"
       },
@@ -38,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "LVJwea2rBujf",
         "vscode": {
@@ -84,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "BeK03Sx7Bujg",
         "vscode": {
@@ -197,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -220,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -309,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -395,7 +408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -418,7 +431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "R_mZIsWwBuji",
         "vscode": {
@@ -469,7 +482,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -537,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "0uVdEguGBujn",
         "vscode": {
@@ -633,7 +646,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -677,7 +690,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "r"
